# auracle-core

./: README.md  setup_auracle.bat  setup_auracle.sh
mcp-server/: index.ts  package.json
mcp-server/src/: index.ts
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs  processor.rs
sdk/: README.md  pyproject.toml
sdk/auracle/: __init__.py  client.py
sdk/python/: client.py  hooks.py
